<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_title" />

    <EditText
        android:id="@+id/thoughts_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_thoughts" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show" />

    <Button
        android:id="@+id/update_title_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_title" />

    <Button
        android:id="@+id/update_thought_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_thought" />

    <Button
        android:id="@+id/delete_title_and_thought_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_title_and_thought" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation= "vertical">

    <TextView
        android:id="@+id/received_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/received_thought_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>